--- a/client/app/chatcomponent/chatcomponent.component.html
+++ b/client/app/chatcomponent/chatcomponent.component.html
@@ -2,7 +2,7 @@
 <ng-container *ngFor="let m of messages | async">  
   <div class="message" [ngClass]="{ 'from': m.from === 'bot',  
                                     'to':   m.from === 'user' }">  
-    {{ m.msg }}  
+    {{ m.msg }} à {{m.date | date:"HH:mm"}} 
   </div>  
 </ng-container>  
 <label for="nameField">Your Message</label>  
