--- a/client/app/offers/offers.component.html
+++ b/client/app/offers/offers.component.html
@@ -1,3 +1,25 @@
+<h1>Offers</h1>
 <ul>
-<li *ngFor="let offer of offers">id: {{offer.id}}  price : {{offer.price}}</li>
+  <li *ngFor="let offer of offers">id: {{offer.id}} price : {{offer.price}}
+    <button (click)="getOffer(offer.id)">get price</button>
+
+  </li>
 </ul>
+
+<div>
+  <p>Offer Price :{{offer.price}}</p>
+</div>
+
+<hr>
+
+<h1>Supply Offers</h1>
+<ul>
+  <li *ngFor="let supplyOffer of supplyOffers">id: {{supplyOffer.id}} price : {{supplyOffer.price}}
+    <button (click)="getSupplyOffer(supplyOffer.id)">get price</button>
+
+  </li>
+</ul>
+
+<div>
+  <p>SupplyOffer :{{supplyOffer.price}}</p>
+</div>
