work with some red in console

--- a/client/app/offers/offers.component.html
+++ b/client/app/offers/offers.component.html
@@ -1,3 +1,33 @@
+<h1>Collection Products</h1>
+<ul>
+  <li *ngFor="let collectionProduct of collectionProducts">id: {{collectionProduct.id}} name : {{collectionProduct.name}}
+    <button (click)="getCollectionProduct(collectionProduct.id)">get description</button>
+
+  </li>
+</ul>
+
+<div>
+  <p>Collection Product Description :{{collectionProduct.description}}</p>
+</div>
+
+<hr>
+
+
+<h1>Supply Products</h1>
+<ul>
+  <li *ngFor="let supplyProduct of supplyProducts">id: {{supplyProduct.id}} name : {{supplyProduct.name}}
+    <button (click)="getSupplyProduct(supplyProduct.id)">get description</button>
+
+  </li>
+</ul>
+
+<div>
+  <p>Supply Product Description :{{supplyProduct.description}}</p>
+</div>
+
+<hr>
+
+
 <h1>Offers</h1>
 <ul>
   <li *ngFor="let offer of offers">id: {{offer.id}} price : {{offer.price}}
