--- a/client/app/chatcomponent/chatcomponent.component.html
+++ b/client/app/chatcomponent/chatcomponent.component.html
@@ -1,4 +1,4 @@
-<h1>My First ChatBot using Angular and Dialogflow</h1>  
+<h1>Comparateur Agri ChatBot</h1>  
 <ng-container *ngFor="let m of messages | async">  
   <div class="message" [ngClass]="{ 'from': m.from === 'bot',  
                                     'to':   m.from === 'user' }">  
